Fix image feature spacing, white theme heading color

--- a/src/css/components/_image-feature.scss
+++ b/src/css/components/_image-feature.scss
@@ -51,7 +51,7 @@
   --il-image-feature-button-hover-color: var(--il-orange);
   --il-image-feature-button-hover-border-color: white;
   --il-image-feature-color: var(--il-blue);
-  --il-image-feature-heading-color: var(--il-orange);
+  --il-image-feature-heading-color: var(--il-blue);
   --il-image-feature-link-color: var(--il-industrial-blue);
   --il-image-feature-link-hover-color: var(--il-altgeld);
   --il-button-border-color: var(--il-blue);
@@ -79,7 +79,7 @@
     max-width: 900px;
   }
 
-  > p:first-of-type {
+  > p:first-child {
     margin-top: 30px;
   }
 
